Atualizando requisitos obrigatorios
